package top.mcwebsite.bridge_pattern;

/**
 * @author mengchen
 * @time 19-2-23 下午5:09
 */
public interface Implementor {

    // 基本方法
    void doSomething();
    void doAnything();
}
