@startuml

abstract class Abstraction
interface Implementor
class RefinedAbstraction
class ConcreteImplementor

Abstraction o-right-> Implementor : "+impl"
RefinedAbstraction -up-|> Abstraction
ConcreteImplementor -up-|> Implementor

class Abstraction {
    +Operation()
}

class Implementor {
    +OperationImpl()
}

@enduml
